site-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: staticsite.local  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dynamic-go-blog-service # Links to the service our Go operator creates
            port:
              number: 80
